[project]
name = "cryptocom-exchange"
version = "0.15.0"
description = "Python 3.9+ async library for crypto.com/exchange API using httpx and websockets"
authors = [{ name = "Morty Space", email = "morty.space@gmail.com" }]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiolimiter>=1.2.1",
    "async-timeout>=5.0.1",
    "cached-property>=2.0.1",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "flake8==3.9",
    "pytest>=7.1.2,<8",
    "pytest-asyncio>=0.18.3,<0.19",
    "pytest-cov>=3.0.0,<4",
    "pytest-doctestplus>=0.12.0,<0.13",
    "pre-commit>=2.18.1,<3",
    "Sphinx>=7.0.0,<8",
    "sphinx-rtd-theme>=1.0.0,<2",
    "mypy>=0.950,<0.951",
    "importlib-metadata>=4.11.3,<5",
]

[tool.hatch.build.targets.sdist]
include = ["src/cryptocom"]

[tool.hatch.build.targets.wheel]
include = ["src/cryptocom"]

[tool.hatch.build.targets.wheel.sources]
"src/cryptocom" = "cryptocom"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 80
target-version = "py311"
unsafe-fixes = true

[tool.semantic_release]
version_toml = [
  "pyproject.toml:tool.poetry.version",
]
branch = "main"
parser_angular_allowed_types="build,chore,ci,docs,feat,fix,perf,style,refactor,test,sync"
parser_angular_minor_types = "feat"
parser_angular_patch_types = "fix,perf,sync"
changelog_sections="feature,fix,sync,perf,breaking,documentation,performance,:boom:,:sparkles:,:children_crossing:,:lipstick:,:iphone:,:egg:,:chart_with_upwards_trend:,:ambulance:,:lock:,:bug:,:zap:,:goal_net:,:alien:,:wheelchair:,:speech_balloon:,:mag:,:apple:,:penguin:,:checkered_flag:,:robot:,:green_apple:,Other"
